# Face-App

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
face_app/: __init__.py
face_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
face_app/core/: __init__.py  clusterer.py  detector.py  scanner.py
face_app/db/: __init__.py  models.py  session.py
face_app/ui/: __init__.py  main_window.py  people_grid.py  photo_viewer.py  review_dialog.py
face_app/utils/: __init__.py  hash_utils.py  image_utils.py
